header and footer changes

--- a/About-Us.html
+++ b/About-Us.html
@@ -21,7 +21,7 @@
                         <i class="fa-solid fa-bars searchglass"></i>
                     </a>
                     <div class="nav-sign-btn">
-                        <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                     </div>
                     <div class="nav-sign-btn">
                         <a href="Login-page.html" class="btn">Login</a>
@@ -38,7 +38,8 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="mb-3 border-2  d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage"
+                                width="100px">
                             <div class="text-white  profile-owner ms-2">
                                 <h4>Personal Account</h4>
                                 <span>Personal Account</span>
@@ -67,12 +68,12 @@
                                         <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Accordion
+                                            Brand
                                         </button>
                                     </h2>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page1</div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
@@ -98,7 +99,7 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page2</div>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +120,7 @@
                         </ul>
                         <div class="offcanvas-left-call-btn">
                             <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                    alt="" width="50px" height="50px">Contact Us</a>
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +153,8 @@
                 <div class="text-center header-input-body mx-auto">
                     <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
                     <div class="header-input-body-glass">
-                        <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+                        <a href="javascript:void(0)" class="btn bg-danger"><i
+                                class="fa-solid fa-magnifying-glass text-white"></i></a>
                     </div>
                 </div>
             </div>
@@ -166,18 +168,16 @@
 
         .About-us-Page-Section {
             padding: 60px 0px 40px;
+            font-family: "Poppins", sans-serif;
         }
 
         .form-body-content label {
             font-size: 16px;
-            font-family: "Poppins", sans-serif;
             color: #64748b;
             font-weight: 500;
         }
         .form-body-content input {
             padding: 8px 10px;
-            font-family: "Poppins", sans-serif;
-
             border-radius: 9px;
         }
 
@@ -186,7 +186,6 @@
             color: white;
             padding: 8px 20px;
             font-size: 16px;
-            font-family: "Poppins", sans-serif;
             border-radius: 9px;
         }
 
@@ -209,7 +208,6 @@
             font-weight: 600;
             font-size: 22px;
             line-height: 28px;
-            font-family: "Poppins", sans-serif;
             color: #64748b;
             margin-bottom: 30px;
         }
@@ -230,9 +228,6 @@
             background-color: blue;
             color: white;
         }
-        .about-right-section h3 , h5{
-            font-family: "Poppins", sans-serif;
-        }
         .about-right-section  h5{
             font-size: 19px;
 
@@ -245,7 +240,6 @@
         }
         
     </style>
-
     <main role="main">
         <section class="About-us-Page-Section">
             <div class="container">
@@ -269,7 +263,7 @@
                             </div>
 
                             <div class="mb-3">
-                                <a href="" class="btn Contact-btn">Contact Me</a>
+                                <a href="javascript:void(0)" class="btn Contact-btn">Contact Me</a>
                             </div>
                         </div>
                     </div>
@@ -285,7 +279,7 @@
                             </div>
                             <div class="d-flex align-items-baseline mb-2">
                                 <div>
-                                    <a href=""><i class="fa-solid fa-location-dot fs-5"></i></a>
+                                    <a href="javascript:void(0)"><i class="fa-solid fa-location-dot fs-5"></i></a>
                                 </div>
                                 <div class="ms-3">
                                     <h5>Address:</h5>
@@ -294,28 +288,28 @@
                             </div>
                             <div class="d-flex align-items-baseline">
                                 <div>
-                                    <a href=""><i class="fa-solid fa-phone fs-5 text-success"></i></a>
+                                    <a href="javascript:void(0)"><i class="fa-solid fa-phone fs-5 text-success"></i></a>
                                 </div>
                                 <div class="ms-3">
                                     <h5>Phone:</h5>
-                                    <p>00 (123) 456 78 90 00 (987) 654 32 10</p>
+                                    <p>+91 9137168732</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-baseline">
                                 <div>
-                                    <a href=""><i class="fa-solid fa-envelope fs-5 text-danger"></i></a>
+                                    <a href="javascript:void(0)"><i class="fa-solid fa-envelope fs-5 text-danger"></i></a>
                                 </div>
                                 <div class="ms-3">
-                                    <h5>Phone:</h5>
-                                    <p>00 (123) 456 78 90 00 (987) 654 32 10</p>
+                                    <h5>Email</h5>
+                                    <p>Onlne@gmail.com</p>
                                 </div>
                             </div>
                         </div>
                         <ul class="About-us-social">
-                            <li><a href=""></a><i class="fa-brands fa-instagram insta"></i></li>
-                            <li><a href=""></a><i class="fa-brands fa-twitter twitt"></i></li>
-                            <li><a href=""></a><i class="fa-brands fa-youtube youtube"></i></li>
-                            <li><a href=""></a><i class="fa-brands fa-linkedin-in liin"></i></li>
+                            <li><a href="javascript:void(0)"></a><i class="fa-brands fa-instagram insta"></i></li>
+                            <li><a href="javascript:void(0)"></a><i class="fa-brands fa-twitter twitt"></i></li>
+                            <li><a href="javascript:void(0)"></a><i class="fa-brands fa-youtube youtube"></i></li>
+                            <li><a href="javascript:void(0)"></a><i class="fa-brands fa-linkedin-in liin"></i></li>
                         </ul>
                     </div>
 
@@ -323,8 +317,6 @@
             </div>
         </section>
 
-
-    
     </main>
 
     <!-- footer-section -->
@@ -334,8 +326,8 @@
             <div class="row footer-top">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="footer-left-sec">
-                        <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
-                            width="160px" height="200px">
+                        <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage" width="160px"
+                            height="200px">
                         <p class="text-center">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
                             aperiam.
@@ -393,7 +385,8 @@
                     <h6>SOME POSTS</h6>
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg"
+                                    alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -404,7 +397,8 @@
 
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png"
+                                    alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -412,9 +406,7 @@
                             <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
@@ -423,8 +415,6 @@
                         <a href="javascript:void(0)">NEW</a>
                         <a href="javascript:void(0)">WIRELESS</a>
                         <a href="javascript:void(0)">CABLES</a>
-                        <a href="javascript:void(0)">DEVICES</a>
-                        <a href="javascript:void(0)">GADGETS</a>
                         <a href="javascript:void(0)"> BRANDS</a>
                         <a href="javascript:void(0)">CASES</a>
                         <a href="javascript:void(0)"> CABLES</a>
@@ -475,7 +465,6 @@
                 </div>
             </div>
         </div>
-
         <div class="copyright-section">
             <div class="container">
                 <div class="row text-center">
@@ -494,7 +483,7 @@
                     </div>
                     <div class="col-lg-4 co-12">
                         <div class="footer-payment-icons">
-                            <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                            <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                         </div>
                     </div>
                 </div>
@@ -502,11 +491,7 @@
         </div>
     </footer>
 
-
-
     <script src="js/bootstrap.bundle.js"></script>
     <script src="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 </body>
-
 </html>
-<!-- 2083 -->
