--- a/Login-page.html
+++ b/Login-page.html
@@ -21,7 +21,7 @@
                         <i class="fa-solid fa-bars searchglass"></i>
                     </a>
                     <div class="nav-sign-btn">
-                        <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                     </div>
                     <div class="nav-sign-btn">
                         <a href="Login-page.html" class="btn">Login</a>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="mb-3 border-2  d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                             <div class="text-white  profile-owner ms-2">
                                 <h4>Personal Account</h4>
                                 <span>Personal Account</span>
@@ -67,12 +67,12 @@
                                         <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Accordion
+                                            Brand
                                         </button>
                                     </h2>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page1</div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
@@ -98,7 +98,7 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page2</div>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +119,7 @@
                         </ul>
                         <div class="offcanvas-left-call-btn">
                             <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                    alt="" width="50px" height="50px">Contact Us</a>
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="text-center header-input-body mx-auto">
                     <input type="text" class="header-input h-100" placeholder="Search Products Here" name="" id="">
                     <div class="header-input-body-glass">
-                        <a href="" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
+                        <a href="javascript:void(0)" class="btn bg-danger"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
                     </div>
                 </div>
             </div>
@@ -166,6 +166,7 @@
 
     .Login-Page-Section {
       padding: 20px 0px 20px;
+      font-family: "Poppins", sans-serif;
     }
 
     .Login-Page-Section h1 {
@@ -176,7 +177,6 @@
 
     .form-body-content label {
       font-size: 16px;
-      font-family: "Poppins", sans-serif;
       color: #64748b;
       font-weight: 500;
     }
@@ -191,14 +191,12 @@
       width: 100%;
       color: white;
       font-size: 16px;
-      font-family: "Poppins", sans-serif;
       border-radius: 9px;
       padding: 9px 0px 9px;
     }
 
     .Login-Page-Section h6 {
       font-size: 16px;
-      font-family: "Poppins", sans-serif;
       color: #8b3DFF;
     }
 
@@ -210,7 +208,6 @@
       border-radius: 9px;
       font-size: 16px;
       padding: 9px 0px 9px;
-      font-family: "Poppins", sans-serif;
     }
 
     .Login-Page-Section .Google-btn:hover {
@@ -226,7 +223,6 @@
       border-radius: 9px;
       font-size: 16px;
       padding: 9px 0px 9px;
-      font-family: "Poppins", sans-serif;
     }
 
     .Login-Page-Section .Facebook-btn:hover {
@@ -238,7 +234,6 @@
       text-decoration: none;
       color: #8b3DFF;
       font-size: 16px;
-      font-family: "Poppins", sans-serif;
     }
 
     .shadow-section {
@@ -275,21 +270,21 @@
                     data-gtm-form-interact-field-id="0">
                   Remember me</h6>
                 <div class="forget-btn">
-                  <a href="">Forgot Password</a>
+                  <a href="javascript:void(0)">Forgot Password</a>
                 </div>
               </div>
               <div class="mb-3 text-center">
-                <a href="" class="btn sign-btn">Sign In</a>
+                <a href="javascript:void(0)" class="btn sign-btn">Sign In</a>
               </div>
               <div class="mb-3">
                 <p>Sign in with your social network.</p>
               </div>
               <div class="mb-3 text-center">
-                <a href="" class="btn Google-btn"><i class="fa-brands fa-google-plus-g me-2"></i>Continue with
+                <a href="javascript:void(0)" class="btn Google-btn"><i class="fa-brands fa-google-plus-g me-2"></i>Continue with
                   Google</a>
               </div>
               <div class="mb-3 text-center">
-                <a href="" class="btn Facebook-btn"><i class="fa-brands fa-facebook me-2"></i>Continue with Facebook</a>
+                <a href="javascript:void(0)" class="btn Facebook-btn"><i class="fa-brands fa-facebook me-2"></i>Continue with Facebook</a>
               </div>
             </div>
           </div>
@@ -299,23 +294,13 @@
     </section>
   </main>
 
-
-
-
-
-
-
-
-
-
   <!-- footer-section -->
-
   <footer class="footer-section">
     <div class="container">
         <div class="row footer-top">
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="footer-left-sec">
-                    <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                    <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                         width="160px" height="200px">
                     <p class="text-center">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -374,7 +359,7 @@
                 <h6>SOME POSTS</h6>
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -385,7 +370,7 @@
 
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -393,9 +378,7 @@
                         <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                     </div>
                 </div>
-
             </div>
-
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                 <h6>POPULAR TAGS</h6>
                 <div class="footer-column-links-tags">
@@ -404,8 +387,6 @@
                     <a href="javascript:void(0)">NEW</a>
                     <a href="javascript:void(0)">WIRELESS</a>
                     <a href="javascript:void(0)">CABLES</a>
-                    <a href="javascript:void(0)">DEVICES</a>
-                    <a href="javascript:void(0)">GADGETS</a>
                     <a href="javascript:void(0)"> BRANDS</a>
                     <a href="javascript:void(0)">CASES</a>
                     <a href="javascript:void(0)"> CABLES</a>
@@ -475,7 +456,7 @@
                 </div>
                 <div class="col-lg-4 co-12">
                     <div class="footer-payment-icons">
-                        <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                        <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                     </div>
                 </div>
             </div>
@@ -483,11 +464,8 @@
     </div>
 </footer>
 
-
-
   <script src="js/bootstrap.bundle.js"></script>
   <script src="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 </body>
 
 </html>
-<!-- 2083 -->
