--- a/Projects.html
+++ b/Projects.html
@@ -28,7 +28,7 @@
                     <i class="fa-solid fa-bars searchglass"></i>
                 </a>
                 <div class="nav-sign-btn">
-                    <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                    <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                 </div>
                 <div class="nav-sign-btn">
                     <a href="Login-page.html" class="btn">Login</a>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <div class="mb-3 border-2  d-flex align-items-center">
-                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                         <div class="text-white  profile-owner ms-2">
                             <h4>Personal Account</h4>
                             <span>Personal Account</span>
@@ -74,12 +74,12 @@
                                     <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                         aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Accordion
+                                        Brand
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
+                                    <div class="accordion-body">Page1</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -105,7 +105,7 @@
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
+                                    <div class="accordion-body">Page2</div>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                     </ul>
                     <div class="offcanvas-left-call-btn">
                         <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                alt="" width="50px" height="50px">Contact Us</a>
+                                alt="shopimage" width="50px" height="50px">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,6 @@
       background: linear-gradient(90deg, #63586f, #453434bf); 
       padding: 20px 0px 20px;
     }
-
     .top-fixed-section h1 {
       color: white;
       font-family: "Lalezar";
@@ -261,10 +260,6 @@
 
 
 
-
-
-
-
       <section class="section-work-data">
         <div class="container">
           <div class="row">
@@ -325,7 +320,7 @@
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInLeft">
               <div class="card">
                 <a class="popup-view" href="img/project1.png"><img class="img-fluid  card-img-top"
-                    src="img/ProjectCard.png" alt=""></a>
+                    src="img/ProjectCard.png" alt="ShopImage"></a>
                 <a class="popup-view" href="img/project1-mob.png"><img class="img-fluid  card-img-top"></a>
                 <a class="popup-view" href="img/ProjectCard2.png"><img class="img-fluid  card-img-top"></a>
                 <a class="popup-view" href="img/project2-mob.png"><img class="img-fluid  card-img-top"></a>
@@ -341,7 +336,7 @@
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInDown">
               <div class="card">
                 <a class="popup-view" href="img/project2.png"><img class="img-fluid card-img-top"
-                    src="img/ProjectCard2.png" alt=""></a>
+                    src="img/ProjectCard2.png" alt="ShopImage"></a>
                 <a class="popup-view" href="img/project2-mob.png"><img class="img-fluid card-img-top"></a>
                 <div class="card-body text-center">
                   <a class="text-danger" href="javascript:void(0)"><span><i
@@ -351,7 +346,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
               <div class="card">
-                <a href="img/project3.png"><img class="img-fluid  card-img-top" src="img/ProjectCard3.png" alt=""></a>
+                <a href="img/project3.png"><img class="img-fluid  card-img-top" src="img/ProjectCard3.png" alt="ShopImage"></a>
                 <a href="img/project3-mob.png"><img class="img-fluid  card-img-top"></a>
                 <div class="card-body text-center">
                   <a href="javascript:void(0)" class="text-info">
@@ -361,7 +356,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInLeft">
               <div class="card">
-                <a href="img/project4.png"><img class="img-fluid  card-img-top" src="img/ProjectCard4.png" alt=""></a>
+                <a href="img/project4.png"><img class="img-fluid  card-img-top" src="img/ProjectCard4.png" alt="ShopImage"></a>
                 <a href="img/project4-mob.png"><img class="img-fluid  card-img-top"></a>
                 <div class="card-body text-center">
                   <a class="text-info" href="javascript:void(0)"><span><i
@@ -371,7 +366,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInUp">
               <div class="card">
-                <a href="img/project5.png"><img class="img-fluid card-img-top" src="img/ProjectCard5.png" alt=""></a>
+                <a href="img/project5.png"><img class="img-fluid card-img-top" src="img/ProjectCard5.png" alt="ShopImage"></a>
                 <a href="img/project5-mob.png"><img class="img-fluid card-img-top"></a>
                 <div class="card-body text-center">
                   <a href="javascript:void(0)" class="text-warning"><span><i
@@ -381,7 +376,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
               <div class="card">
-                <a href="img/project6.png"><img class="img-fluid card-img-top" src="img/ProjectCard6.png" alt=""></a>
+                <a href="img/project6.png"><img class="img-fluid card-img-top" src="img/ProjectCard6.png" alt="ShopImage"></a>
                 <a href="img/project6-mob.png"><img class="img-fluid card-img-top"></a>
                 <div class="card-body text-center">
                   <a class="text-primary" href="javascript:void(0)"><span><i
@@ -391,11 +386,41 @@
             </div>
             <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
               <div class="card">
-                <a href="img/project7.png"><img class="img-fluid card-img-top" src="img/ProjectCard7.png" alt=""></a>
+                <a href="img/project7.png"><img class="img-fluid card-img-top" src="img/ProjectCard7.png" alt="ShopImage"></a>
                 <a href="img/project7-mob.png"><img class="img-fluid card-img-top"></a>
                 <div class="card-body text-center">
                   <a class="text-primary" href="javascript:void(0)"><span><i
-                        class="fa-brands fa-linkedin mx-1"></i></span>Project6</a>
+                        class="fa-brands fa-linkedin mx-1"></i></span>Project7</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
+              <div class="card">
+                <a href="img/project8.png"><img class="img-fluid card-img-top" src="img/ProjectCard8.png" alt="ShopImage"></a>
+                <a href="img/project8-mob.png"><img class="img-fluid card-img-top"></a>
+                <div class="card-body text-center">
+                  <a class="text-primary" href="javascript:void(0)"><span><i
+                        class="fa-brands fa-linkedin mx-1"></i></span>Project8</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
+              <div class="card">
+                <a href="img/project9.png"><img class="img-fluid card-img-top" src="img/ProjectCard9.png" alt="ShopImage"></a>
+                <a href="img/project9-mob.png"><img class="img-fluid card-img-top"></a>
+                <div class="card-body text-center">
+                  <a class="text-primary" href="javascript:void(0)"><span><i
+                        class="fa-brands fa-linkedin mx-1"></i></span>Project9</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 animate__animated animate__fadeInRight">
+              <div class="card">
+                <a href="img/project10.png"><img class="img-fluid card-img-top" src="img/ProjectCard10.png" alt="ShopImage"></a>
+                <a href="img/project10-mob.png"><img class="img-fluid card-img-top"></a>
+                <div class="card-body text-center">
+                  <a class="text-primary" href="javascript:void(0)"><span><i
+                        class="fa-brands fa-linkedin mx-1"></i></span>Project10</a>
                 </div>
               </div>
             </div>
@@ -414,7 +439,7 @@
         <div class="row footer-top">
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="footer-left-sec">
-                    <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                    <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                         width="160px" height="200px">
                     <p class="text-center">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -473,7 +498,7 @@
                 <h6>SOME POSTS</h6>
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -484,7 +509,7 @@
 
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -492,9 +517,7 @@
                         <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                     </div>
                 </div>
-
             </div>
-
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                 <h6>POPULAR TAGS</h6>
                 <div class="footer-column-links-tags">
@@ -503,8 +526,6 @@
                     <a href="javascript:void(0)">NEW</a>
                     <a href="javascript:void(0)">WIRELESS</a>
                     <a href="javascript:void(0)">CABLES</a>
-                    <a href="javascript:void(0)">DEVICES</a>
-                    <a href="javascript:void(0)">GADGETS</a>
                     <a href="javascript:void(0)"> BRANDS</a>
                     <a href="javascript:void(0)">CASES</a>
                     <a href="javascript:void(0)"> CABLES</a>
@@ -574,7 +595,7 @@
                 </div>
                 <div class="col-lg-4 co-12">
                     <div class="footer-payment-icons">
-                        <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                        <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                     </div>
                 </div>
             </div>
