--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vmart</title>
-    <link rel="icon" href="homepageimages/brand2.jpg">
     <link rel="stylesheet" href="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/blog.css">
@@ -22,7 +21,7 @@
                         <i class="fa-solid fa-bars searchglass"></i>
                     </a>
                     <div class="nav-sign-btn">
-                        <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                     </div>
                     <div class="nav-sign-btn">
                         <a href="Login-page.html" class="btn">Login</a>
@@ -39,7 +38,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="mb-3 border-2  d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                             <div class="text-white  profile-owner ms-2">
                                 <h4>Personal Account</h4>
                                 <span>Personal Account</span>
@@ -68,12 +67,12 @@
                                         <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Accordion
+                                            Brand
                                         </button>
                                     </h2>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page1</div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
@@ -99,7 +98,7 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page2</div>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +119,7 @@
                         </ul>
                         <div class="offcanvas-left-call-btn">
                             <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                    alt="" width="50px" height="50px">Contact Us</a>
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +166,6 @@
             background: linear-gradient(90deg, #63586f, #453434bf); 
             padding: 20px 0px 20px;
         }
-
         .top-fixed-section h1 {
             font-family: "Lalezar";
             letter-spacing: 2px;
@@ -189,7 +187,7 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <div>
-                            <img class="img-fluid" src="homepageimages/blogleft-top-img.jpg" alt="">
+                            <img class="img-fluid" src="homepageimages/blogleft-top-img.jpg" alt="shopimage">
                         </div>
                         <div>
                             <h2 class="fw-bolder mb-3 pt-2 text-primary">Delivering What Consumers Really Value?</h2>
@@ -222,7 +220,7 @@
                                 </p>
                             </div>
                             <div class="card mb-4 p-3 p-md-5 card-bottom-bg-blue">
-                                <h5 class="mb-2 md-mb-4">Words can be like X-rays, if you use them properly—they’ll go
+                                <h5 class="mb-2 mb-md-4">Words can be like X-rays, if you use them properly—they’ll go
                                     through
                                     anything. You
                                     read and you’re pierced.</h5>
@@ -253,7 +251,6 @@
                                     </li>
                                 </ul>
                             </div>
-
                             <div class="d-flex justify-content-between article-next-prev-btn">
                                 <div>
                                     <a href="javascript:void(0)" class="btn  prev-btn">PREV ARTICLE</a>
@@ -264,12 +261,11 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="col-lg-4 ">
-                        <div class="card border-0">
+                    <div class="col-lg-4">
+                        <div class="card border-0 bg-transparent px-1">
                             <div>
                                 <img class="rounded-circle m-auto d-block mb-2" src="homepageimages/Eva Mendes.jpg"
-                                    alt="" height="70px" width="70px">
+                                    alt="shopimage" height="70px" width="70px">
                             </div>
                             <div class="text-center portfolio">
                                 <h4>Shakespeare D. Willaim</h4>
@@ -314,7 +310,7 @@
                                 </ul>
                             </div>
 
-                            <div class="blog-right-categories">
+                            <div class="blog-right-categories px-1">
                                 <h4>Categories</h4>
                                 <div>
                                     <ul class="p-0">
@@ -336,55 +332,55 @@
                             <div class="mb-2 latest-post">
                                 <h4 class="">Latest Post</h4>
                             </div>
-                            <div class="card post-head mb-3 border-0">
+                            <div class="card   post-head mb-3 border-0 ">
                                 <div class="row">
                                     <div class="col-3">
-                                        <img class="img-fluid" src="homepageimages/blog-furniture-1.jpg" alt="">
+                                        <img class="img-fluid" src="homepageimages/blog-furniture-1.jpg" alt="shopimage">
                                     </div>
-                                    <div class="col-8">
+                                    <div class="col-8 ">
                                         <div class="card-body p-0">
                                             <h6>Modern furniture in velvet</h6>
-                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>30 December, 2022
+                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>11 December, 2022
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card post-head mb-3 border-0">
+                            <div class="card bg-transparent post-head mb-3 border-0">
                                 <div class="row">
                                     <div class="col-3">
-                                        <img class="img-fluid" src="homepageimages/blog-furniture-2.jpg" alt="">
+                                        <img class="img-fluid" src="homepageimages/blog-furniture-2.jpg" alt="shopimage">
                                     </div>
                                     <div class="col-8">
                                         <div class="card-body p-0">
                                             <h6>Modern furniture in velvet</h6>
-                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>30 December, 2022
+                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>12 December, 2022
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card post-head mb-3 border-0">
+                            <div class="card  post-head mb-3 border-0">
                                 <div class="row">
                                     <div class="col-3">
-                                        <img class="img-fluid" src="homepageimages/blog-furniture-3.jpg" alt="">
+                                        <img class="img-fluid" src="homepageimages/blog-furniture-3.jpg" alt="shopimage">
                                     </div>
                                     <div class="col-8">
                                         <div class="card-body p-0">
                                             <h6>Modern furniture in velvet</h6>
-                                            <span><i class="fa-solid fa-calendar-days  pe-2"></i></span>30 December,
+                                            <span><i class="fa-solid fa-calendar-days  pe-2"></i></span>13 December,
                                             2022
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="card post-head mb-3 border-0">
+                            <div class="card bg-transparent post-head mb-3 border-0">
                                 <div class="row">
                                     <div class="col-3">
-                                        <img class="img-fluid" src="homepageimages/blog-furniture-4.jpg" alt="">
+                                        <img class="img-fluid" src="homepageimages/blog-furniture-4.jpg" alt="shopimage">
                                     </div>
                                     <div class="col-8">
                                         <div class="card-body p-0">
                                             <h6>Modern furniture in velvet</h6>
-                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>30 December, 2022
+                                            <span><i class="fa-solid fa-calendar-days pe-2"></i></span>23 December, 2022
                                         </div>
                                     </div>
                                 </div>
@@ -392,18 +388,17 @@
                             <div class="card post-head mb-3 border-0">
                                 <div class="row">
                                     <div class="col-3">
-                                        <img class="img-fluid" src="homepageimages/blog-furniture-5.jpg" alt="">
+                                        <img class="img-fluid" src="homepageimages/blog-furniture-5.jpg" alt="shopimage">
                                     </div>
                                     <div class="col-8">
                                         <div class="card-body p-0">
                                             <h6>Modern furniture in velvet</h6>
-                                            <span><i class="fa-solid fa-calendar-days  pe-2"></i></span>30 December,
+                                            <span><i class="fa-solid fa-calendar-days  pe-2"></i></span>25 December,
                                             2022
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="popular-tags">
                                 <h4>Popular Tags</h4>
                                 <ul class="p-0 ">
@@ -414,22 +409,15 @@
                                     <li><a href="javascript:void(0)">design</a></li>
                                     <li><a href="javascript:void(0)">modern</a></li>
                                     <li><a href="javascript:void(0)">Bag</a></li>
-                                    <li><a href="javascript:void(0)">Shoe</a></li>
+                                    <li><a href="javascript:void(0)">Shoes</a></li>
                                 </ul>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-
     </main>
-
-
-
-
-
 
     <!-- footer-section -->
 
@@ -438,7 +426,7 @@
             <div class="row footer-top">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="footer-left-sec">
-                        <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                        <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                             width="160px" height="200px">
                         <p class="text-center">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -497,7 +485,7 @@
                     <h6>SOME POSTS</h6>
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -508,7 +496,7 @@
 
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -516,9 +504,7 @@
                             <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
@@ -527,8 +513,6 @@
                         <a href="javascript:void(0)">NEW</a>
                         <a href="javascript:void(0)">WIRELESS</a>
                         <a href="javascript:void(0)">CABLES</a>
-                        <a href="javascript:void(0)">DEVICES</a>
-                        <a href="javascript:void(0)">GADGETS</a>
                         <a href="javascript:void(0)"> BRANDS</a>
                         <a href="javascript:void(0)">CASES</a>
                         <a href="javascript:void(0)"> CABLES</a>
@@ -598,58 +582,14 @@
                     </div>
                     <div class="col-lg-4 co-12">
                         <div class="footer-payment-icons">
-                            <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                            <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
-
-
-
-
-    <style>
-        .menu {
-            width: 100%;
-            z-index: 99;
-            position: static;
-        }
-
-        .menu.sticky {
-            position: fixed;
-            top: 0;
-        }
-    </style>
-
-
-
-
-    <!-- https://michalsnik.github.io/aos/ -->
-    <script src="js/aos.js"></script>
-
-
-
-    <script>
-        AOS.init({
-            easing: 'ease-out-back',
-            duration: 1000
-        });
-    </script>
     <script src="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/js/all.min.js"></script>
-
-    <script>
-        $('.hero__scroll').on('click', function (e) {
-            $('html, body').animate({
-                scrollTop: $(window).height()
-            }, 1200);
-        });
-    </script>
-
-
-    <script src="js/script.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
-    <script src="js/myscript.js"></script>
 </body>
-
 </html>
