--- a/Our-Team.html
+++ b/Our-Team.html
@@ -24,7 +24,7 @@
                         <i class="fa-solid fa-bars searchglass"></i>
                     </a>
                     <div class="nav-sign-btn">
-                        <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                     </div>
                     <div class="nav-sign-btn">
                         <a href="Login-page.html" class="btn">Login</a>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="mb-3 border-2  d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                             <div class="text-white  profile-owner ms-2">
                                 <h4>Personal Account</h4>
                                 <span>Personal Account</span>
@@ -70,12 +70,12 @@
                                         <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Accordion
+                                            Brand
                                         </button>
                                     </h2>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page1</div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
@@ -101,7 +101,7 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page2</div>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +122,7 @@
                         </ul>
                         <div class="offcanvas-left-call-btn">
                             <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                    alt="" width="50px" height="50px">Contact Us</a>
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -168,10 +168,11 @@
 
 
 
+
     <style>
         .top-fixed-section {
             color: white;
-            background-color: rgba(0, 0, 0, 0.718);
+            background: linear-gradient(90deg, #63586f, #453434bf); 
             padding: 20px 0px 20px;
         }
 
@@ -196,9 +197,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            border-radius: 50%;
-            
+            border-radius: 50%; 
         }
+        
+
         .Team-Social-left-icon {
             position: absolute;
             top: 23%;
@@ -368,16 +370,12 @@
         </section>
     </main>
 
-
-
-
-
     <footer class="footer-section">
         <div class="container">
             <div class="row footer-top">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="footer-left-sec">
-                        <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                        <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                             width="160px" height="200px">
                         <p class="text-center">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -436,7 +434,7 @@
                     <h6>SOME POSTS</h6>
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -447,7 +445,7 @@
 
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -455,9 +453,7 @@
                             <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
@@ -466,8 +462,6 @@
                         <a href="javascript:void(0)">NEW</a>
                         <a href="javascript:void(0)">WIRELESS</a>
                         <a href="javascript:void(0)">CABLES</a>
-                        <a href="javascript:void(0)">DEVICES</a>
-                        <a href="javascript:void(0)">GADGETS</a>
                         <a href="javascript:void(0)"> BRANDS</a>
                         <a href="javascript:void(0)">CASES</a>
                         <a href="javascript:void(0)"> CABLES</a>
@@ -537,13 +531,14 @@
                     </div>
                     <div class="col-lg-4 co-12">
                         <div class="footer-payment-icons">
-                            <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                            <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+
     <script src="js/bootstrap.bundle.js"></script>
     <script src="js/aos.js"></script>
     <script src="./fontawesome-free-6.5.1-web/fontawesome-free-6.5.1-web/js/all.min.js"></script>
