--- a/categories.html
+++ b/categories.html
@@ -24,7 +24,7 @@
                     <i class="fa-solid fa-bars searchglass"></i>
                 </a>
                 <div class="nav-sign-btn">
-                    <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                    <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                 </div>
                 <div class="nav-sign-btn">
                     <a href="Login-page.html" class="btn">Login</a>
@@ -41,7 +41,7 @@
                 </div>
                 <div class="offcanvas-body">
                     <div class="mb-3 border-2  d-flex align-items-center">
-                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                        <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                         <div class="text-white  profile-owner ms-2">
                             <h4>Personal Account</h4>
                             <span>Personal Account</span>
@@ -70,12 +70,12 @@
                                     <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                         aria-expanded="false" aria-controls="flush-collapseOne">
-                                        Accordion
+                                        Brand
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
+                                    <div class="accordion-body">Page1</div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -101,7 +101,7 @@
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                    <div class="accordion-body">Placeholder</div>
+                                    <div class="accordion-body">Page2</div>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +122,7 @@
                     </ul>
                     <div class="offcanvas-left-call-btn">
                         <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                alt="" width="50px" height="50px">Contact Us</a>
+                                alt="shopimage" width="50px" height="50px">Contact Us</a>
                     </div>
                 </div>
             </div>
@@ -303,10 +303,6 @@
     </section>
   </main>
 
-  <!-- footer -->
-
-
-
   <!-- footer-section -->
 
   <footer class="footer-section">
@@ -314,7 +310,7 @@
         <div class="row footer-top">
             <div class="col-lg-3 col-md-6 mb-4">
                 <div class="footer-left-sec">
-                    <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                    <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                         width="160px" height="200px">
                     <p class="text-center">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -373,7 +369,7 @@
                 <h6>SOME POSTS</h6>
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -384,7 +380,7 @@
 
                 <div class="footer-post-sec">
                     <div>
-                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                        <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                         </a>
                     </div>
                     <div class="ms-2">
@@ -392,9 +388,7 @@
                         <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                     </div>
                 </div>
-
             </div>
-
             <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                 <h6>POPULAR TAGS</h6>
                 <div class="footer-column-links-tags">
@@ -403,8 +397,6 @@
                     <a href="javascript:void(0)">NEW</a>
                     <a href="javascript:void(0)">WIRELESS</a>
                     <a href="javascript:void(0)">CABLES</a>
-                    <a href="javascript:void(0)">DEVICES</a>
-                    <a href="javascript:void(0)">GADGETS</a>
                     <a href="javascript:void(0)"> BRANDS</a>
                     <a href="javascript:void(0)">CASES</a>
                     <a href="javascript:void(0)"> CABLES</a>
@@ -474,7 +466,7 @@
                 </div>
                 <div class="col-lg-4 co-12">
                     <div class="footer-payment-icons">
-                        <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                        <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                     </div>
                 </div>
             </div>
