--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
                         <i class="fa-solid fa-bars searchglass"></i>
                     </a>
                     <div class="nav-sign-btn">
-                        <a href="index.html" class=""><img src="img/logo (1).png" alt="" width="90px"></a>
+                        <a href="index.html" class=""><img src="img/logo (1).png" alt="shopimage" width="90px"></a>
                     </div>
                     <div class="nav-sign-btn">
                         <a href="Login-page.html" class="btn">Login</a>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="offcanvas-body">
                         <div class="mb-3 border-2  d-flex align-items-center">
-                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="" width="100px">
+                            <img class="img-fluid rounded-circle" src="./img/About-Us person.jpg" alt="shopimage" width="100px">
                             <div class="text-white  profile-owner ms-2">
                                 <h4>Personal Account</h4>
                                 <span>Personal Account</span>
@@ -68,12 +68,12 @@
                                         <button class="accordion-button border-0 shadow-none collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
                                             aria-expanded="false" aria-controls="flush-collapseOne">
-                                            Accordion
+                                            Brand
                                         </button>
                                     </h2>
                                     <div id="flush-collapseOne" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page1</div>
                                     </div>
                                 </div>
                                 <div class="accordion-item">
@@ -99,7 +99,7 @@
                                     </h2>
                                     <div id="flush-collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                        <div class="accordion-body">Placeholder</div>
+                                        <div class="accordion-body">Page2</div>
                                     </div>
                                 </div>
                             </div>
@@ -120,7 +120,7 @@
                         </ul>
                         <div class="offcanvas-left-call-btn">
                             <a href="javascript:void(0)" class="btn"><img class="img-fluid" src="img/call-round.gif"
-                                    alt="" width="50px" height="50px">Contact Us</a>
+                                    alt="shopimage" width="50px" height="50px">Contact Us</a>
                         </div>
                     </div>
                 </div>
@@ -211,14 +211,12 @@
         .Faq-Section {
             padding: 40px 0px 40px;
         }
+        .Faq-Section a{
+            text-decoration: none;
+        }
 
         .Faq-Section a {
             font-family: "Yeseva One", serif;
-        }
-
-        .Faq-Section p {
-            font-family: "Yeseva One", serif;
-            font-size: 14px;
         }
 
         .Faq-Section h2 {
@@ -250,7 +248,7 @@
                                         Can’t find any answer for your question?
                                         <br />
                                         Ask our
-                                        <a href="#" class="text-primary">customer
+                                        <a href="javascript:void(0)" class="text-primary">customer
                                             support</a>
                                     </p>
                                 </div>
@@ -261,7 +259,7 @@
                                 <div class="accordion" id="accordionExample">
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseOne"
                                                 aria-expanded="false" aria-controls="collapseOne">
@@ -282,7 +280,7 @@
 
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                                 aria-expanded="true" aria-controls="collapseTwo">
@@ -304,7 +302,7 @@
                                     </div>
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                                 aria-expanded="false" aria-controls="collapseThree">
@@ -325,7 +323,7 @@
                                     </div>
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseFour"
                                                 aria-expanded="false" aria-controls="collapseFour">
@@ -346,7 +344,7 @@
                                     </div>
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseFive"
                                                 aria-expanded="false" aria-controls="collapseFive">
@@ -367,7 +365,7 @@
                                     </div>
                                     <div class="border border-1 mb-2 rounded-3 p-2">
                                         <h2 class="h5 mb-0">
-                                            <a href="#"
+                                            <a href="javascript:void(0)"
                                                 class="text-reset d-flex justify-content-between align-items-center"
                                                 data-bs-toggle="collapse" data-bs-target="#collapseSix"
                                                 aria-expanded="false" aria-controls="collapseSix">
@@ -397,16 +395,6 @@
 
         </section>
     </main>
-
-
-
-
-
-
-
-
-
-
     <!-- footer-section -->
 
     <footer class="footer-section">
@@ -414,7 +402,7 @@
             <div class="row footer-top">
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="footer-left-sec">
-                        <img class="img-fluid d-block m-auto mb-3" src="homepageimages/vmart_store-logo.png" alt=""
+                        <img class="img-fluid d-block m-auto mb-3" src="img/logo (1).png" alt="shopimage"
                             width="160px" height="200px">
                         <p class="text-center">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium fugit, sunt tenetur qui
@@ -473,7 +461,7 @@
                     <h6>SOME POSTS</h6>
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b5.jpg" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -484,7 +472,7 @@
 
                     <div class="footer-post-sec">
                         <div>
-                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="">
+                            <a href="javascript:void(0)"><img class="img-fluid" src="homepageimages/b1.png" alt="shopimage">
                             </a>
                         </div>
                         <div class="ms-2">
@@ -492,9 +480,7 @@
                             <p>FUSCE TINCIDUNT ACCUMSAN PRETIUM</p>
                         </div>
                     </div>
-
                 </div>
-
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 ">
                     <h6>POPULAR TAGS</h6>
                     <div class="footer-column-links-tags">
@@ -503,8 +489,6 @@
                         <a href="javascript:void(0)">NEW</a>
                         <a href="javascript:void(0)">WIRELESS</a>
                         <a href="javascript:void(0)">CABLES</a>
-                        <a href="javascript:void(0)">DEVICES</a>
-                        <a href="javascript:void(0)">GADGETS</a>
                         <a href="javascript:void(0)"> BRANDS</a>
                         <a href="javascript:void(0)">CASES</a>
                         <a href="javascript:void(0)"> CABLES</a>
@@ -574,7 +558,7 @@
                     </div>
                     <div class="col-lg-4 co-12">
                         <div class="footer-payment-icons">
-                            <img class="img-fluid" src="homepageimages/payment.png" alt="" width="200">
+                            <img class="img-fluid" src="homepageimages/payment.png" alt="shopimage" width="210">
                         </div>
                     </div>
                 </div>
